--- a/public/style/mobile/order.css
+++ b/public/style/mobile/order.css
@@ -31,10 +31,12 @@
   display: inline !important;
 }
 .create_order .inner {
-  display: -webkit-box;
-  display: box;
   padding: 0.5rem;
   box-sizing: content-box;
+}
+.create_order .inner .default-addr {
+  display: -webkit-box;
+  display: box;
 }
 .create_order .inner .addr_detail {
   -webkit-box-flex: 1;
