--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -31,11 +31,13 @@
     }
   }
   .inner{
-    display: -webkit-box;
-    display: box;
     // height: 2rem;
     padding: 0.5rem;
     box-sizing: content-box;
+    .default-addr{
+      display: -webkit-box;
+      display: box;
+    }
     .addr_detail{
       -webkit-box-flex:1;
       box-flex: 1;
