--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -93,7 +93,7 @@ block content
                     td.param-info 夏季
       .recommend
     .detail-footbar
-      a.footer-cart(href="/cart")
+      a.footer-cart(href="/cart",external)
         i.fa.fa-shopping-cart
         span.text 购物车
       .footer-buy
