--- a/public/style/mobile/order.css
+++ b/public/style/mobile/order.css
@@ -102,6 +102,10 @@
 .create_order .footer .pieces_count {
   line-height: 1;
 }
+.popup-address .inner {
+  display: -webkit-box;
+  display: box;
+}
 .order_list .all-order {
   padding-top: 2rem;
 }
