--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -105,6 +105,12 @@
   }
 }
 
+.popup-address{
+  .inner{
+    display: -webkit-box;
+    display: box;
+  }
+}
 .order_list{
   .all-order{
     padding-top: 2rem;
