--- a/app/views/mobile/order/index.jade
+++ b/app/views/mobile/order/index.jade
@@ -31,9 +31,15 @@ block content
               .sum 共#{count}件 合计
                 em ￥88
               .operate
-                a.red-btn(href="/evaluate/evaluate?_id=#{order._id}",external) 收货评价
-                a.red-btn.hide(href="") 确认收货
-                a.red-btn(href="/express?name=#{order.express_msg.name}&number=#{order.express_msg.number}&orderid=#{order._id}") 订单跟踪
-                a.red-btn(href="/returns/goods?orderid=#{order._id}",external) 申请退货
+                if order.status == '待发货'
+                  p 等待发货
+                else if order.status == '待付款'
+                  a.red-btn(href="") 去付款
+                else if order.status == '待收货'
+                  a.red-btn.hide(href="") 确认收货
+                  a.red-btn(href="/express?name=#{order.express_msg.name}&number=#{order.express_msg.number}&orderid=#{order._id}") 订单跟踪
+                  a.red-btn(href="/returns/goods?orderid=#{order._id}",external) 申请退货
+                else if order.status == '待评价'
+                  a.red-btn(href="/evaluate/evaluate?_id=#{order._id}",external) 收货评价
 
 block scripts
