--- a/app/views/includes/footer.jade
+++ b/app/views/includes/footer.jade
@@ -1,3 +1,4 @@
 script(type="text/javascript",src="/js/mobile/zepto.min.js")
 script(type="text/javascript",src="/js/mobile/sm.min.js")
 script(type="text/javascript",src="/js/mobile/mobile.js")
+script(type="text/javascript",src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js")
