--- a/app/views/mobile/test.jade
+++ b/app/views/mobile/test.jade
@@ -1,4 +1,4 @@
-extends ../../layout
+extends ../layout
 
 block content
   .page
@@ -7,24 +7,16 @@ block content
 block scripts
   script.
     $(function(){
-      var param_get_js_config = {'cmd':'get_js_config','url':'http://xl.caiqr.com/test.html'};  
+      var param_get_js_config = {'cmd':'get_js_config','url':'http://bestyxie.cn/test'};  
       hander_data_from_wechat_api(param_get_js_config,hander_js_config);
     })
     function hander_js_config(data){
-      /*wx.config({ 
-          debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。 
-          appId: '', // 必填，公众号的唯一标识 
-          timestamp: , // 必填，生成签名的时间戳 
-          nonceStr: '', // 必填，生成签名的随机串 
-          signature: 'sM4AOVdWfPE4DxkXGEs8VJAAX0hDsNvepedYVgPudpde87_OEkUJdX4mFJAutu8m3l0Zg2FbxavtkibLqYZHcw',// 必填，签名，见附录1 
-          jsApiList: [] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2 
-      });*/
       wx.config(data);
       wx.ready(function(){
         wx.checkJsApi({
           jsApiList: ['onMenuShareTimeline'],
           success: function(res){
-            alert(JSON.stringify(res));
+            console.log('checkJsApi'+JSON.stringify(res));
           }
         })
       });
@@ -33,21 +25,20 @@ block scripts
         link: 'www.baidu.com',//分享链接
         imgUrl: '',//分享图片
         success: function(res) {
-          alert('share success');
+          console.log(res);
         },
         cancel: function(res){
-          alert('share fail');
+          console.log(res);
         }
       });
       wx.error(function(res){
-        alert(JSON.stringify(res));
+        console.log('error:'+JSON.stringify(res));
       });
     }
     function hander_data_from_wechat_api(param,fn){
-      console.info(param);
       //发送请求获取wx_js_config
       $.ajax({
-        url: 'http://xl.caiqr.com/wechat',
+        url: 'http://bestyxie.cn/wechat',
         type: 'POST',
         data: param,
         datatype: 'json',
