--- a/app/views/mobile/order/create_order.jade
+++ b/app/views/mobile/order/create_order.jade
@@ -54,7 +54,7 @@ block content
                 p.cart-goods-price
                   span.price ￥#{product.price}
                   - total += product.price*product.qty;
-                  - count += prodct.qty;
+                  - count += product.qty;
                   span.piece x#{product.qty}
         .express
           input(type="hidden",name="order[express]",value="0")
