--- a/app/views/mobile/order/pay.jade
+++ b/app/views/mobile/order/pay.jade
@@ -3,7 +3,7 @@ extends ../../layout
 block content
   .page.create_order
     header.bar.bar-nav.header
-      a.arr(href="javascript:void(history.back());")
+      a.arr(href="/order")
         i.fa.fa-angle-left
       h1.title 支付订单
     .content.native-scroll
