--- a/app/views/mobile/order/pay_complete.jade
+++ b/app/views/mobile/order/pay_complete.jade
@@ -1,7 +1,7 @@
 extends ../../layout
 
 block content
-  .page.order_list
+  .page.pay_complete
     header.head-block.bar.bar-nav.header
       a.arr(href="javascript:history.back();")
         i.fa.fa-angle-left
