--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -183,4 +183,32 @@
       margin: 0 0.25rem;
     }
   }
+  .section{
+    background: #fff;
+    display: -webkit-flex;
+    display:-moz-box; /* Firefox */
+    display:-webkit-box; /* Safari and Chrome */
+    display:box;
+    p{
+      -webkit-box-flex: 1;
+      box-flex: 1;
+    }
+  }
+  .pay{
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    background: #ff5e7a;
+  }
+}
+
+.pay_complete{
+  p{
+    background: #fff;
+    height: 6rem;
+    padding: 2rem 1rem;
+  }
+  a{
+    color: #ff5e7a;
+  }
 }
