--- a/app/views/mobile/order/pay_complete.jade
+++ b/app/views/mobile/order/pay_complete.jade
@@ -3,7 +3,7 @@ extends ../../layout
 block content
   .page.pay_complete
     header.head-block.bar.bar-nav.header
-      a.arr(href="javascript:history.back();")
+      a.arr(href="/")
         i.fa.fa-angle-left
       h1.title 付款成功
     .content.native-scroll.wrapper
