--- a/app/views/mobile/order/pay.jade
+++ b/app/views/mobile/order/pay.jade
@@ -21,9 +21,8 @@ block scripts
         WeixinJSBridge.invoke(
           "getBrandWCPayRequest",data,
           function(res){
+            console.log(res);
             if(res.err_msg == 'get_brand_wcpay_request：ok'){
-              //- 使用以上方式判断前端返回,微信团队郑重提示：
-              //- res.err_msg将在用户支付成功后返回 ok，但并不保证它绝对可靠。
               window.location.href="/pay/paid";
             }
             else{
@@ -44,7 +43,6 @@ block scripts
         data.out_trade_no = $(this).data('id');
         data.total_fee = #{order.total+order.express};
         $.post('/getsign',data,function(result){
-          console.log(result);
           if(typeof WeixinJSBridge == 'undefined'){
             $(document).on('WeixinJSBridgeReady',function(){onBridgeReady(result)},false);
           }else{
