--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -33,6 +33,8 @@ html
             //- a(href="/order?status=待发货") 待发货订单
           li#returns
             a(href="/admin/returns") 待退货订单
+          li#service
+            a(href="/service") 客服管理
       .main
         block content
     include ./includes/admin-footer
