--- a/app/views/admin/service/index.jade
+++ b/app/views/admin/service/index.jade
@@ -31,7 +31,7 @@ block scripts
             }
           });
         }else{
-          $('#newproduct').trigger('submit');
+          $('#newservice').trigger('submit');
         }
       });
     })
