--- a/app/views/admin/service/index.jade
+++ b/app/views/admin/service/index.jade
@@ -24,7 +24,7 @@ block scripts
       //- 确定新增商品
       $('.next').on('click',function(){
         if($(this).hasClass('disabled')){
-          var ipts = Array.prototype.slice.call($('#newproduct .required'));
+          var ipts = Array.prototype.slice.call($('#newservice .required'));
           ipts.forEach(function(ipt){
             if($(ipt).val().length == 0){
               $(ipt).addClass('err');
