--- a/app/views/admin/service/_new_server.jade
+++ b/app/views/admin/service/_new_server.jade
@@ -5,7 +5,7 @@
       a.close(href="javascrip:;",data-dismiss="modal")
         i.fa.fa-close
     .modal-content
-      form#newproduct(action="/service/new",method="POST",enctype="multipart/form-data")
+      form#newproduct(action="/service/new",method="POST")
         .form-group
           label(for="name") 登录账号*
           .input-box
