--- a/app/views/admin/service/_new_server.jade
+++ b/app/views/admin/service/_new_server.jade
@@ -10,6 +10,7 @@
           label(for="name") 登录账号*
           .input-box
             input#name.required(type="text",name="service[kf_account]",placeholder="test@test.com")
+            label @gh_c2f1e87fd5ab
         .form-group
           label(for="price") 昵称*
           .input-box
