--- a/app/views/admin/service/index.jade
+++ b/app/views/admin/service/index.jade
@@ -4,7 +4,7 @@ block content
   //- .header
   h2 商品管理
   .wrapper
-    .productlist.section
+    .productlist.service.section
       .head
         a.newpdt(href="javascript:void(0);",data-toggle="modal",data-target="#new")
           i.fa.fa-plus
