--- a/public/style/mobile/order.css
+++ b/public/style/mobile/order.css
@@ -102,6 +102,25 @@
 .create_order .footer .pieces_count {
   line-height: 1;
 }
+.create_order .section {
+  background: #fff;
+  display: -webkit-flex;
+  display: -moz-box;
+  /* Firefox */
+  display: -webkit-box;
+  /* Safari and Chrome */
+  display: box;
+}
+.create_order .section p {
+  -webkit-box-flex: 1;
+  box-flex: 1;
+}
+.create_order .pay {
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  background: #ff5e7a;
+}
 .popup-address .inner {
   display: -webkit-box;
   display: box;
@@ -178,25 +197,6 @@
   border-radius: 1rem;
   border: 1px solid #e94e7a;
   margin: 0 0.25rem;
-}
-.order_list .section {
-  background: #fff;
-  display: -webkit-flex;
-  display: -moz-box;
-  /* Firefox */
-  display: -webkit-box;
-  /* Safari and Chrome */
-  display: box;
-}
-.order_list .section p {
-  -webkit-box-flex: 1;
-  box-flex: 1;
-}
-.order_list .pay {
-  color: #fff;
-  padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
-  background: #ff5e7a;
 }
 .pay_complete p {
   background: #fff;
