--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -155,3 +155,44 @@ block scripts
       }
       select();
     });
+    $(function(){
+      var param_get_js_config = {'cmd':'get_js_config','url':window.location.href};  
+      hander_data_from_wechat_api(param_get_js_config,hander_js_config);
+    })
+    function hander_js_config(data){
+      wx.config(data);
+      wx.ready(function(){
+        wx.checkJsApi({
+          jsApiList: ['onMenuShareTimeline','chooseWXPay'],
+          success: function(res){
+            console.log('checkJsApi'+JSON.stringify(res));
+          }
+        })
+      });
+      wx.onMenuShareTimeline({
+        title: #{product.name},
+        link: window.location.href,//分享链接
+        imgUrl: #{product.pics[0]},//分享图片
+        success: function(res) {
+          console.log(res);
+        },
+        cancel: function(res){
+          console.log(res);
+        }
+      });
+      wx.error(function(res){
+        console.log('error:'+JSON.stringify(res));
+      });
+    }
+    function hander_data_from_wechat_api(param,fn){
+      //发送请求获取wx_js_config
+      $.ajax({
+        url: 'http://bestyxie.cn/wechat',
+        type: 'POST',
+        data: param,
+        datatype: 'json',
+        success: function(data){
+          fn(data);
+        }
+      })
+    }
