--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -82,6 +82,9 @@ body {
 .right {
   float: right;
 }
+.error {
+  border: 1px solid red;
+}
 header {
   width: 100%;
   height: 70px;
@@ -470,6 +473,9 @@ body {
   height: 100%;
   background: #f7db56;
   position: relative;
+}
+.login .msg {
+  color: red;
 }
 .login .login-panel {
   width: 300px;
