--- a/public/less/pc/login.less
+++ b/public/less/pc/login.less
@@ -9,6 +9,9 @@ html,body{
   height: 100%;
   background: #f7db56;
   position: relative;
+  .msg{
+    color: red;
+  }
   .login-panel{
     width: 300px;
     height: 400px;
