--- a/app/views/admin/product_management/product_edit.jade
+++ b/app/views/admin/product_management/product_edit.jade
@@ -1,7 +1,7 @@
 extends ../../adminLayout
 
 block content
-  h2 用户管理/商品编辑
+  h2 商品编辑
   .wrapper.edit-page
     form#newproduct(action="/admin/product/update",method="POST",enctype="multipart/form-data")
       .form-group
