--- a/public/less/pc/public_admin.less
+++ b/public/less/pc/public_admin.less
@@ -230,9 +230,18 @@ header{
   text-align: center;
   line-height: 50px;
   position: relative;
-  cursor: pointer;
+  overflow: hidden;
   &:hover{
     border-color: #a9a9a9;
     color: #a9a9a9;
+  }
+  input{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
   }
 }
