--- a/app/views/admin/product_management/_new_product.jade
+++ b/app/views/admin/product_management/_new_product.jade
@@ -47,7 +47,7 @@
           .pic-wrap
           a.newpic(href="javascrip:void(0);")
             i.fa.fa-plus
-            input.required(type="file",name="pics",accept="image/*")
+            input.required(type="file",name="pics",accept="image/*",multiple="multiple")
     .modal-footer
       button.next(type="submit") 确定
       button.cancle 取消
