--- a/app/views/admin/product_management/product_edit.jade
+++ b/app/views/admin/product_management/product_edit.jade
@@ -57,7 +57,7 @@ block content
                 i.icon.j-origin_img &times;
           a.newpic(href="javascrip:void(0);")
             i.fa.fa-plus
-            input.required(type="file",name="pics",accept="image/*")
+            input.required(type="file",name="pics",accept="image/*",multiple="multiple")
       .form-group
         label 标签
         div.label-group.j-label-group
