--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -26,7 +26,7 @@ html
             a(href="/admin/user/list") 用户列表
           li#category
             a(href="/admin/category") 商品分类
-          li#category
+          li#activity
             a(href="/admin/activity") 活动
           li#delivery
             a(href="/admin/delivery") 待发货订单
@@ -42,8 +42,16 @@ html
         if(url.indexOf('list')>0){
           $('.nav #list').addClass('active').siblings('li').removeClass('active');
         }else if(url.indexOf('category') > 0){
+          console.log($('.nav #category'));
           $('.nav #category').addClass('active').siblings('li').removeClass('active');
-        }else{
+        }else if(url.indexOf('activity') > 0){
+          $('.nav #activity').addClass('active').siblings('li').removeClass('active');
+        }else if(url.indexOf('delivery') > 0){
+          $('.nav #delivery').addClass('active').siblings('li').removeClass('active');
+        }else if(url.indexOf('returns') > 0){
+          $('.nav #returns').addClass('active').siblings('li').removeClass('active');
+        }
+        else{
           $('.nav #index').addClass('active').siblings('li').removeClass('li');
         }
       })
