--- a/app/views/admin/delivery/_input_express.jade
+++ b/app/views/admin/delivery/_input_express.jade
@@ -12,7 +12,7 @@
             .dropdown.j-dropdown
               input#exporess_name.required(type="hidden")
               button(type="button",data-toggle="dropdown",aria-haspopup="true",aria-expanded="false")
-                | 选择快递
+                bdo.j-exp_name 选择快递
                 span.caret
               ul.dropdown-menu
                 li(data-express="shentong") 申通快递
