--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -756,6 +756,7 @@ body {
 }
 #express .dropdown button {
   width: 100%;
+  height: 30px;
   border: 1px solid #e5e5e5;
   background: #fff;
   text-align: left;
