--- a/public/less/pc/delivery.less
+++ b/public/less/pc/delivery.less
@@ -6,6 +6,7 @@
     width: 160px;
     button{
       width: 100%;
+      height: 30px;
       border: 1px solid #e5e5e5;
       background: #fff;
       text-align: left;
