--- a/public/style/pc/delivery.css
+++ b/public/style/pc/delivery.css
@@ -3,6 +3,7 @@
 }
 #express .dropdown button {
   width: 100%;
+  height: 30px;
   border: 1px solid #e5e5e5;
   background: #fff;
   text-align: left;
