--- a/app/views/mobile/shoppingcart/index.jade
+++ b/app/views/mobile/shoppingcart/index.jade
@@ -21,7 +21,7 @@ block content
                 .cart-goods-counter
                   .qty-box
                     span.num-reduce.lf.j-reduct -
-                    em.num-input.lf.j-num 1
+                    em.num-input.lf.j-num #{product.qty}
                     span.num-add.lf.j-add +
               p.cart-goods-price
                 span.price #{product.price}
