--- a/app/views/mobile/user/index.jade
+++ b/app/views/mobile/user/index.jade
@@ -38,7 +38,7 @@ block content
             i.fa.fa-retweet
             p 退货退款
             if ret
-              .tips 10
+              .tips #{ret}
           a.block.order(href="/order")
             i.fa.fa-gift
             p 全部订单
