--- a/app/views/mobile/order/index.jade
+++ b/app/views/mobile/order/index.jade
@@ -11,12 +11,14 @@ block content
         each order in orders
           li.orders-item
             - var count = 0
+            - var sum = 0
             .item-head
               .order-id 订单号 #{order._id}
               .order-status #{order.status}
             ul.item-content
               each product in order.products
                 - count += product.qty
+                - sum += product.price*count
                 li.order
                   .order-img
                     img(src="#{product.pics[0]}")
@@ -29,7 +31,7 @@ block content
                     .count x#{product.qty}
             .item-footer.clearfix
               .sum 共#{count}件 合计
-                em ￥88
+                em ￥#{sum}
               .operate
                 if order.status == '待发货'
                   p 等待发货
@@ -37,11 +39,13 @@ block content
                   a.red-btn.j-cancle-order(href="javascript:;",data-id="#{order._id}") 取消订单
                   a.red-btn(href="/order/pay?_id=#{order._id}",external) 去付款
                 else if order.status == '待收货'
-                  a.red-btn.hide(href="") 确认收货
+                  a.red-btn(href="/order/get") 确认收货
                   a.red-btn(href="/express?name=#{order.express_msg.name}&number=#{order.express_msg.number}&orderid=#{order._id}") 订单跟踪
                   a.red-btn(href="/returns/goods?orderid=#{order._id}",external) 申请退货
                 else if order.status == '待评价'
                   a.red-btn(href="/evaluate/evaluate?_id=#{order._id}",external) 收货评价
+                else if order.status == 1
+                  a 正在申请退货/退款
 
 block scripts
   script.
